docker/udemy-docker-and-kubernetes/complex-kubernetes/k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
    # in NodePort we added nodePort as well, here we don't need it because it's not going to expose outside the node
