docker/udemy-docker-and-kubernetes/complex-kubernetes/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # tells kuberenetes that we'd like to add ingress controller based on the nginx project
    kubernetes.io/ingress.class: nginx
    # define how the copy of nginx behaves - after deciding to send to the server remove the /api
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000

# In order to move to https there are changes that must be done in this file - they are in shelf
